improved spacing on correct/wrong msg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,10 @@ hr {
     margin-top: 10px;
 }
 
+#msgContainer p {
+    margin-top: 10px;
+}
+
 button:hover {
     opacity: 50%;
 }
